<resources>
    <string name="app_name">WiseBuild</string>
    <string name="add_part">Add new part</string>
    <string name="add_part_activity_label">Add part</string>
    <string name="motherboard">Motherboard</string>
    <string name="cpu">CPU</string>
    <string name="memory">Memory</string>
    <string name="add_part_category_choose_tooltip">What kind of part do you want to add?</string>
    <string name="part_creation_activity">Part parameters</string>
    <string name="part_name">Part name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="add_photo">Change photo</string>
    <string name="save">Save</string>
    <string name="creating_part_message">New %s</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="num_of_cores">Num of cores</string>
    <string name="type">Type</string>
    <string name="socket">Socket</string>
    <string name="fields_invalid">One or more fields invalid</string>
    <string name="ok">Ok</string>
    <string name="title_activity_part_list">Part browser</string>
    <string name="browse_parts">Browse parts</string>
    <string name="action_settings">Settings</string>
    <string name="part_photo">Part photo</string>
    <string name="unknown">Unknown</string>
    <string name="price_value">%1$s $</string>
    <string name="component_creation">Create new component</string>
    <string name="create_assembly">create assembly</string>
    <string name="create_assembly_label">Choose parts</string>
    <string name="create_assembly_back_description">background</string>
    <string name="save_assembly">Save assembly</string>
    <string name="assembly_activity_header">Choose parts for new PC assembly, when you\'re done push Save button in bottom of the screen</string>
    <string name="cores_threads">cores</string>
    <string name="performance_score">performance score</string>
    <string name="total">total</string>
    <string name="cannot_continue">Cannot continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pc">PC</string>
    <string name="open_random_part">open random part</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_with_vk">Login with VK</string>
    <string name="welcome_message">Welcome, %s</string>
    <string name="capacity_mb">Capacity (mb)</string>
    <string name="select_part">Select a part</string>
    <string name="part_browser">Part browser</string>
</resources>
